tests/cases/compiler-development/artifact/errors/diagnostic-parser-missing-call-close.ari
fn callee(x: i64, y: i64) -> i64 {
  return x + y;
}

fn main() -> i64 {
  return callee(1, 2;
}
